# Mips

./: .gitignore  CLAUDE.md  CMakeLists.txt  MipsGenerator.cpp  MipsGenerator.h  compiler.cpp  perf_test.sh  run_tests.sh  性能测试1.md  性能测试2.md
报错/: 报错.md
测试程序库/A/testcase1/: ans.txt  in.txt  testfile.txt
测试程序库/A/testcase2/: ans.txt  config.json
测试程序库/A/testcase3/: testfile.txt
测试程序库/A/testcase3/.ipynb_checkpoints/: ans-checkpoint.txt  testfile-checkpoint.txt
测试程序库/A/testcase4/: config.json  testfile.txt
测试程序库/A/testcase4/.ipynb_checkpoints/: ans-checkpoint.txt
测试程序库/A/testcase5/: ans.txt  testfile.txt
测试程序库/A/testcase5/.ipynb_checkpoints/: testfile-checkpoint.txt
测试程序库/A/testcase6/: ans.txt  config.json
测试程序库/A/testcase6/.ipynb_checkpoints/: testfile-checkpoint.txt
测试程序库/B/testcase1/: ans.txt
测试程序库/B/testcase2/: ans.txt  testfile.txt
测试程序库/B/testcase3/: ans.txt  testfile.txt
测试程序库/B/testcase4/: in.txt
测试程序库/B/testcase5/: ans.txt  testfile.txt
测试程序库/B/testcase7/: ans.txt  testfile.txt
测试程序库/C/testcase1/: ans.txt  testfile.txt
测试程序库/C/testcase2/: ans.txt  testfile.txt
测试程序库/C/testcase3/: testfile.txt
测试程序库/C/testcase3/.ipynb_checkpoints/: ans-checkpoint.txt
测试程序库/C/testcase4/: in.txt  testfile.txt
测试程序库/C/testcase5/: ans.txt  config.json  testfile.txt
